--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Production
 dist
 dist-ssr
 *.local
+
+# Testing
+coverage
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +30,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
 .vercel
+.next
+
+# Cache
+.cache
+.temp
