--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
@@ -62,6 +63,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
+    "vite-plugin-html-inject": "^1.1.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "wouter": "^3.3.5",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
