Mise à jour de la configuration TypeScript pour inclure les types de Vite et Node. Ajout d'un fichier de configuration Vercel pour la gestion des redirections et des en-têtes. Modification de la configuration Vite pour utiliser une nouvelle URL d'API et ajustement des options de construction. Refactorisation de la classe `Brain` pour utiliser un modèle singleton et mise à jour de la gestion des erreurs. Ajout d'un hook `useUser` pour la création d'utilisateurs et d'une page `NotFoundPage` avec navigation. Suppression de l'ancien fichier `http-client.ts` et ajout de nouveaux types pour les utilisateurs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,17 +27,16 @@
       "@/services/*": ["./src/services/*"],
       "@/internal-components/*": ["./src/components/*"],
       "@/prod-components/*": ["./src/components/error-boundary/*"]
-    }
+    },
+    "types": ["vite/client", "node"]
   },
   "include": [
     "env.d.ts",
     "src"
   ],
   "exclude": [
-    "src/brain/Brain.ts",
-    "src/brain/BrainRoute.ts",
-    "src/brain/data-contracts.ts",
-    "src/dev-components/**/*"
+    "node_modules",
+    "dist"
   ],
   "references": [
     {
